Adding login router

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,6 @@
 html(lang=en)
   head
-    title= title
+    title Home | Blogger
 
   body
-    h1 Welcome to the index page 
+    h1 Welcome to the index page
