Serving static content and including client libs

--- a/views/login.pug
+++ b/views/login.pug
@@ -1,5 +1,7 @@
 html(lang=en)
   head
     title Login | blogger
+    link(rel="stylesheet", href="css/vendor/bootstrap/bootstrap.min.css")
+    link(rel="stylesheet", href="css/vendor/font-awesome/css/font-awesome.min.css")
   body
     h1 Welcome to the login page
