--- a/views/register.pug
+++ b/views/register.pug
@@ -11,6 +11,10 @@ block content
           .col-xs-12.col-md-6.col-md-offset-3
             h1 Blogger Registration Form
             form(action="/register", method="post")
+              - if(message.length > 0) {
+                .alert.alert-danger
+                  p #{message}
+              - }
               .form-group
                 label(for="username") Username
                 input.form-control(type="text", name="username", id="username", placeholder="Username")
