--- a/views/templates/header.pug
+++ b/views/templates/header.pug
@@ -1,7 +1,24 @@
+-function prettyDate(date){
+    //if it's already a date object and not a string you don't need this line:
+    -var d = date.getDate();
+    -var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" ];
+    -var m = monthNames[date.getMonth()];
+    -var y = date.getFullYear();
+    -return d+' '+m+' '+y;
+-}
+
+-function cutPost(content, length) {
+  - if (content.length > length) {
+    - return content.slice(0, length).concat('...');
+  - }
+  - return content;
+-}
+
 html(lang=en)
   head
     block title
     link(rel="stylesheet", href="css/vendor/bootstrap/bootstrap.min.css")
     link(rel="stylesheet", href="css/vendor/font-awesome/css/font-awesome.min.css")
+    link(rel="stylesheet", href="css/style.css")
   body
     block content
