--- a/views/users.pug
+++ b/views/users.pug
@@ -1,11 +1,10 @@
-extends ./templates/header.pug
-
+extend ./templates/header.pug
 block title
-  title Home | Blogger
+  title Users | Blogger
 
 block navigation
   include ./templates/navigation.pug
 
 block content
   .container
-    h1 Welcome to the root page
+    h1 Welcome to the users page
