--- a/views/profile.pug
+++ b/views/profile.pug
@@ -2,6 +2,9 @@ extends ./templates/header.pug
 block title
   title Profile | Blogger
 
+block navigation
+  include ./templates/navigation.pug
+
 block content
   .container
     .row
