--- a/views/templates/header.pug
+++ b/views/templates/header.pug
@@ -21,4 +21,5 @@ html(lang=en)
     link(rel="stylesheet", href="css/vendor/font-awesome/css/font-awesome.min.css")
     link(rel="stylesheet", href="css/style.css")
   body
+    block navigation
     block content
