--- a/views/posts.pug
+++ b/views/posts.pug
@@ -24,12 +24,14 @@ block content
                       a(href="/users/" + post._author.username)=  post._author.username
                     p= cutPost(post.content, 140)
             - }
-          .col-xs-12.col-md-4
-            form(action="posts/new", method="post")
-              .form-group
-                label(for="title") Title
-                input.form-control(type="text", name="title", id="title")
-              .form-group
-                label(for="content") Content
-                textarea.form-control(name="content", id="content")
-              input.btn.btn-primary(type="submit", value="Post")
+          -if (currentUser) {
+            .col-xs-12.col-md-4
+              form(action="posts/new", method="post")
+                .form-group
+                  label(for="title") Title
+                  input.form-control(type="text", name="title", id="title")
+                .form-group
+                  label(for="content") Content
+                  textarea.form-control(name="content", id="content")
+                input.btn.btn-primary(type="submit", value="Post")
+          -}
