Adding single post page

--- a/views/templates/header.pug
+++ b/views/templates/header.pug
@@ -17,9 +17,9 @@
 html(lang=en)
   head
     block title
-    link(rel="stylesheet", href="css/vendor/bootstrap/bootstrap.min.css")
-    link(rel="stylesheet", href="css/vendor/font-awesome/css/font-awesome.min.css")
-    link(rel="stylesheet", href="css/style.css")
+    link(rel="stylesheet", href="/css/vendor/bootstrap/bootstrap.min.css")
+    link(rel="stylesheet", href="/css/vendor/font-awesome/css/font-awesome.min.css")
+    link(rel="stylesheet", href="/css/style.css")
   body
     block navigation
     block content
