--- a/views/templates/navigation.pug
+++ b/views/templates/navigation.pug
@@ -24,5 +24,5 @@ block navigation
             li
               a(href="/profile") Login
             li
-              a(href="/logout") Register
+              a(href="/register") Register
           - }
